# test

./: CMakeLists.txt
include/: utils.h  weights.h
src/: main.cu  utils.cu
